Restore lost cleanup work

--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -8,8 +8,6 @@
   "Could not connect to the {{ currentNetwork }} network.": "Impossible de se connecter au réseau {{ currentNetwork }}.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Notez que si l'option est activée, \"{{ address }}\" ne sera plus l'adresse par défaut.",
   "Error while sweeping address {{ from }}": "Erreur lors du nettoyage de l'address {{ from }}",
-  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "La quantité de gaz doit être supérieure à {{ MINIMAL_GAS_AMOUNT }}.",
-  "Gas price must be greater than {{ amount }}": "Le prix du gaz doit être supérieur à {{ amount }}",
   "Remove wallet \"{{ walletName }}\"": "Supprimer le wallet \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Entrez un mot de passe pour \"{{ switchToWalletName }}\"",
   "{{ amount }} words entered": "{{ amount }} mots inscrits",
@@ -79,7 +77,6 @@
   "Gas price": "Prix du gaz",
   "Check": "Vérifier",
   "Send": "Envoyer",
-  "Info Check": "Vérification des infos",
   "Password Check": "Vérification du mot de passe",
   "Error while building the transaction": "Erreur en construisant la transaction",
   "Transactions sent!": "Transactions envoyées !",
@@ -244,5 +241,32 @@
   "Transactions": "Transactions",
   "ALPH amount": "Montant en ALPH",
   "Set lock time": "Régler le temps de verrouillage",
-  "Tweak gas settings": "Ajuster les paramètres du gaz"
+  "Tweak gas settings": "Ajuster les paramètres du gaz",
+  "Call contract": "Call contract",
+  "Deploy contract": "Deploy contract",
+  "Issue token amount": "Issue token amount",
+  "Tokens to issue (optional)": "Tokens to issue (optional)",
+  "Gas": "Gas",
+  "Review": "Review",
+  "Invalid address group for the WallectConnect connection": "Invalid address group for the WallectConnect connection",
+  "Error in pairing": "Error in pairing",
+  "WalletConnect error": "WalletConnect error",
+  "Try again": "Try again",
+  "Connect to a dApp": "Connect to a dApp",
+  "Paste what was copied from the dApp": "Paste what was copied from the dApp",
+  "Connect": "Connect",
+  "Approve the proposal to connect": "Approve the proposal to connect",
+  "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
+  "Name": "Name",
+  "URL": "URL",
+  "Description": "Description",
+  "Network ID": "Network ID",
+  "Address group": "Address group",
+  "all": "all",
+  "Signer address": "Signer address",
+  "Select an address to sign with.": "Select an address to sign with.",
+  "Reject": "Reject",
+  "Approve": "Approve",
+  "Unable to convert the amount": "Unable to convert the amount",
+  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}"
 }
