--- a/locales/vi-VN/App.json
+++ b/locales/vi-VN/App.json
@@ -8,8 +8,6 @@
   "Could not connect to the {{ currentNetwork }} network.": "Không thể kết nối đến mạng {{ currentNetwork }}.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Lưu ý, nếu đã kích hoạt, \"{{ address }}\" sẽ không còn là địa chỉ mặc định nữa.",
   "Error while sweeping address {{ from }}": "Lỗi khi sweep từ địa chỉ {{ from }}",
-  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Số lượng Gas phải lớn hơn {{ MINIMAL_GAS_AMOUNT }}.",
-  "Gas price must be greater than {{ amount }}": "Giá Gas phải lớn hơn {{ amount }}",
   "Remove wallet \"{{ walletName }}\"": "Gỡ bỏ ví \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Nhập mật khẩu cho \"{{ switchToWalletName }}\"",
   "{{ amount }} words entered": "{{ amount }} từ đã thêm vào",
@@ -76,7 +74,6 @@
   "Gas price": "Giá gas",
   "Check": "Kiểm tra",
   "Send": "Gửi",
-  "Info Check": "Kiểm tra thông tin",
   "Password Check": "Kiểm tra mật khẩu",
   "Error while building the transaction": "Đã xãy ra lỗi trong quá trình thực hiện giao dịch",
   "Transactions sent!": "Giao dịch đã gửi!",
@@ -240,5 +237,32 @@
   "Transactions": "Giao dịch",
   "ALPH amount": "Số lượng ALPH",
   "Set lock time": "Đặt thời gian khoá",
-  "Tweak gas settings": "Tuỳ chỉnh cài đặt gas"
+  "Tweak gas settings": "Tuỳ chỉnh cài đặt gas",
+  "Call contract": "Call contract",
+  "Deploy contract": "Deploy contract",
+  "Issue token amount": "Issue token amount",
+  "Tokens to issue (optional)": "Tokens to issue (optional)",
+  "Gas": "Gas",
+  "Review": "Review",
+  "Invalid address group for the WallectConnect connection": "Invalid address group for the WallectConnect connection",
+  "Error in pairing": "Error in pairing",
+  "WalletConnect error": "WalletConnect error",
+  "Try again": "Try again",
+  "Connect to a dApp": "Connect to a dApp",
+  "Paste what was copied from the dApp": "Paste what was copied from the dApp",
+  "Connect": "Connect",
+  "Approve the proposal to connect": "Approve the proposal to connect",
+  "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
+  "Name": "Name",
+  "URL": "URL",
+  "Description": "Description",
+  "Network ID": "Network ID",
+  "Address group": "Address group",
+  "all": "all",
+  "Signer address": "Signer address",
+  "Select an address to sign with.": "Select an address to sign with.",
+  "Reject": "Reject",
+  "Approve": "Approve",
+  "Unable to convert the amount": "Unable to convert the amount",
+  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}"
 }
