--- a/locales/de-DE/App.json
+++ b/locales/de-DE/App.json
@@ -8,8 +8,6 @@
   "Could not connect to the {{ currentNetwork }} network.": "Konnte keine Verbindung mit dem {{ currentNetwork }} Netzwerk herstellen.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Beachten Sie, dass, wenn aktiviert, \"{{ address }}\" nicht mehr die Standardadresse sein wird.",
   "Error while sweeping address {{ from }}": "Fehler beim Durchsuchen der Adresse {{ from }}",
-  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Die Gas Menge muss größer sein als {{ MINIMAL_GAS_AMOUNT }}.",
-  "Gas price must be greater than {{ amount }}": "Gas Preis muss größer sein als {{ amount }}",
   "Remove wallet \"{{ walletName }}\"": "Brieftasche entfernen \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Passwort für \"{{ switchToWalletName }}\" eingeben",
   "{{ amount }} words entered": "{{ amount }} Wörter eingegeben",
@@ -76,7 +74,6 @@
   "Gas price": "Gas Preis",
   "Check": "Prüfen",
   "Send": "Senden",
-  "Info Check": "Info Prüfung",
   "Password Check": "Passwort prüfen",
   "Error while building the transaction": "Fehler beim Erstellen der Transaktion",
   "Transactions sent!": "Transaktionen gesendet!",
@@ -240,5 +237,32 @@
   "Transactions": "Vorgänge",
   "ALPH amount": "ALPH-Betrag",
   "Set lock time": "Sperrdauer einstellen",
-  "Tweak gas settings": "Gas Einstellungen optimieren"
+  "Tweak gas settings": "Gas Einstellungen optimieren",
+  "Call contract": "Call contract",
+  "Deploy contract": "Deploy contract",
+  "Issue token amount": "Issue token amount",
+  "Tokens to issue (optional)": "Tokens to issue (optional)",
+  "Gas": "Gas",
+  "Review": "Review",
+  "Invalid address group for the WallectConnect connection": "Invalid address group for the WallectConnect connection",
+  "Error in pairing": "Error in pairing",
+  "WalletConnect error": "WalletConnect error",
+  "Try again": "Try again",
+  "Connect to a dApp": "Connect to a dApp",
+  "Paste what was copied from the dApp": "Paste what was copied from the dApp",
+  "Connect": "Connect",
+  "Approve the proposal to connect": "Approve the proposal to connect",
+  "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
+  "Name": "Name",
+  "URL": "URL",
+  "Description": "Description",
+  "Network ID": "Network ID",
+  "Address group": "Address group",
+  "all": "all",
+  "Signer address": "Signer address",
+  "Select an address to sign with.": "Select an address to sign with.",
+  "Reject": "Reject",
+  "Approve": "Approve",
+  "Unable to convert the amount": "Unable to convert the amount",
+  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}"
 }
