--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -8,8 +8,6 @@
   "Could not connect to the {{ currentNetwork }} network.": "Could not connect to the {{ currentNetwork }} network.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Note that if activated, \"{{ address }}\" will not be the default address anymore.",
   "Error while sweeping address {{ from }}": "Error while sweeping address {{ from }}",
-  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
-  "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
   "Remove wallet \"{{ walletName }}\"": "Remove wallet \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Enter password for \"{{ switchToWalletName }}\"",
   "{{ amount }} words entered": "{{ amount }} words entered",
@@ -76,7 +74,6 @@
   "Gas price": "Gas price",
   "Check": "Check",
   "Send": "Send",
-  "Info Check": "Info Check",
   "Password Check": "Password Check",
   "Error while building the transaction": "Error while building the transaction",
   "Transactions sent!": "Transactions sent!",
@@ -240,5 +237,32 @@
   "Transactions": "Transactions",
   "ALPH amount": "ALPH amount",
   "Set lock time": "Set lock time",
-  "Tweak gas settings": "Tweak gas settings"
+  "Tweak gas settings": "Tweak gas settings",
+  "Call contract": "Call contract",
+  "Deploy contract": "Deploy contract",
+  "Issue token amount": "Issue token amount",
+  "Tokens to issue (optional)": "Tokens to issue (optional)",
+  "Gas": "Gas",
+  "Review": "Review",
+  "Invalid address group for the WallectConnect connection": "Invalid address group for the WallectConnect connection",
+  "Error in pairing": "Error in pairing",
+  "WalletConnect error": "WalletConnect error",
+  "Try again": "Try again",
+  "Connect to a dApp": "Connect to a dApp",
+  "Paste what was copied from the dApp": "Paste what was copied from the dApp",
+  "Connect": "Connect",
+  "Approve the proposal to connect": "Approve the proposal to connect",
+  "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
+  "Name": "Name",
+  "URL": "URL",
+  "Description": "Description",
+  "Network ID": "Network ID",
+  "Address group": "Address group",
+  "all": "all",
+  "Signer address": "Signer address",
+  "Select an address to sign with.": "Select an address to sign with.",
+  "Reject": "Reject",
+  "Approve": "Approve",
+  "Unable to convert the amount": "Unable to convert the amount",
+  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}"
 }
