--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -29,11 +29,13 @@
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.":"There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.",
   "Select":"Select",
   "Amount exceeds available balance":"Amount exceeds available balance",
-  "Amount":"Amount",
   "Available":"Available",
   "Use max amount":"Use max amount",
   "Main address":"Main address",
   "Current network":"Current network",
+  "Direction":"Direction",
+  "Timestamp":"Timestamp",
+  "Amount":"Amount",
   "Pending":"Pending",
   "Show more":"Show more",
   "No transactions to display":"No transactions to display",
@@ -75,7 +77,6 @@
   "No secret phrase was stored along with this wallet":"No secret phrase was stored along with this wallet",
   "From address":"From address",
   "To address":"To address",
-  "Amount":"Amount",
   "Expected fee":"Expected fee",
   "Address format is incorrect":"Address format is incorrect",
   "From address":"From address",
@@ -123,6 +124,9 @@
   "Remove current wallet":"Remove current wallet",
   "Settings":"Settings",
   "Version":"Version",
+  "General":"General",
+  "Networks":"Networks",
+  "Wallets":"Wallets",
   "from":"from",
   "in": "in",
   "Show in explorer":"Show in explorer",
