Add missing translations

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -15,7 +15,6 @@
   "Enter password for \"{{ switchToWalletName }}\"": "Enter password for \"{{ switchToWalletName }}\"",
   "{{ amount }} words entered": "{{ amount }} words entered",
   "Address label": "Address label",
-  "★ Main address": "★ Main address",
   "The wallet is offline.": "The wallet is offline.",
   "Discreet mode": "Discreet mode",
   "Main address": "Main address",
@@ -58,8 +57,7 @@
   "Select the address to sweep the funds from.": "Select the address to sweep the funds from.",
   "To address": "To address",
   "Select the address to sweep the funds to.": "Select the address to sweep the funds to.",
-  "This operation will sweep all funds from": "This operation will sweep all funds from",
-  "and transfer them to": "and transfer them to",
+  "sweepOperationFromTo": "This operation will sweep all funds from <1>{{ from }}</1> and transfer them to <3>{{ to }}</3>.",
   "Consolidate UTXOs": "Consolidate UTXOs",
   "Fee": "Fee",
   "Consolidate": "Consolidate",
@@ -205,5 +203,16 @@
   "Your address": "Your address",
   "I've copied the words, continue": "I've copied the words, continue",
   "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.",
-  "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee."
+  "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.",
+  "Welcome!": "Welcome!",
+  "Welcome back!": "Welcome back!",
+  "Please choose a wallet and enter your password to continue.": "Please choose a wallet and enter your password to continue.",
+  "Create / import a new wallet": "Create / import a new wallet",
+  "(current)": "(current)",
+  "Default address for sending transactions.": "Default address for sending transactions.",
+  "Error while fetching data for address {{ hash }}": "Error while fetching data for address {{ hash }}",
+  "Open in explorer": "Open in explorer",
+  "Reduce": "Reduce",
+  "Show addresses": "Show addresses",
+  "More info": "More info"
 }
