--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -197,6 +197,7 @@
   "Advanced user: want to start with": "Advanced user: want to start with",
   "one address per group for mining or DeFi?": "one address per group for mining or DeFi?",
   "Show advanced options": "Show advanced options",
+  "Hide advanced options": "Hide advanced options",
   "For mining or DeFi use.": "For mining or DeFi use.",
   "Address copied to clipboard!": "Address copied to clipboard!",
   "Your Wallet": "Your Wallet",
