--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -194,8 +194,7 @@
   "Everything is ready!": "Everything is ready!",
   "Welcome to Alephium.": "Welcome to Alephium.",
   "Let's go!": "Let's go!",
-  "Advanced user: want to start with": "Advanced user: want to start with",
-  "one address per group for mining or DeFi?": "one address per group for mining or DeFi?",
+  "welcomeScreenOneAddressPerGroupMessage": "Advanced user: want to start with <1>one address per group for mining or DeFi?</1>",
   "Show advanced options": "Show advanced options",
   "Hide advanced options": "Hide advanced options",
   "For mining or DeFi use.": "For mining or DeFi use.",
