Add close descriptor to centered modal

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -222,5 +222,6 @@
   "Optional passphrase (advanced)": "Optional passphrase (advanced)",
   "Optional passphrase": "Optional passphrase",
   "Activate dark mode": "Activate dark mode",
-  "Pick a color": "Pick a color"
+  "Pick a color": "Pick a color",
+  "Close": "Close"
 }
