--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -162,7 +162,7 @@
   "Alephium Logo": "Alephium Logo",
   "Alephium": "Alephium",
   "WALLET": "WALLET",
-  "SWITCH WALLET": "SWITCH WALLET",
+  "CURRENT WALLET": "CURRENT WALLET",
   "MENU": "MENU",
   "Overview": "Overview",
   "Lock": "Lock",
