Add second input to confirm passphrase

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -219,5 +219,7 @@
   "welcomeScreenPassphraseMessage": "If you want to use a <1>passphrase</1>, lock your newly created wallet.",
   "I have read and understood the documentation": "I have read and understood the documentation",
   "Optional passphrase (advanced)": "Optional passphrase (advanced)",
-  "Optional passphrase": "Optional passphrase"
+  "Optional passphrase": "Optional passphrase",
+  "Confirm passphrase": "Confirm passphrase",
+  "Passphrases don't match": "Passphrases don't match"
 }
