Convert expandable section title to checkbox

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -218,7 +218,7 @@
   "passphraseWarningMessage": "<0>This is an advanced feature!</0><br />Use it only if you know what you are doing.<br />Please, read our <5>documentation</5> to learn about it.",
   "welcomeScreenPassphraseMessage": "If you want to use a <1>passphrase</1>, lock your newly created wallet.",
   "I have read and understood the documentation": "I have read and understood the documentation",
-  "Optional passphrase (advanced)": "Optional passphrase (advanced)",
+  "Use optional passphrase (advanced)": "Use optional passphrase (advanced)",
   "Optional passphrase": "Optional passphrase",
   "Confirm passphrase": "Confirm passphrase",
   "Passphrases don't match": "Passphrases don't match"
