Improve accessibility for side navigation

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -160,6 +160,7 @@
   "Alephium Logo": "Alephium Logo",
   "Alephium": "Alephium",
   "WALLET": "WALLET",
+  "CURRENT WALLET": "CURRENT WALLET",
   "MENU": "MENU",
   "Overview": "Overview",
   "Lock": "Lock",
