Add new strings that will be needed

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -228,7 +228,7 @@
   "Pick a color": "Pick a color",
   "Close": "Close",
   "Tab navigation": "Tab navigation",
-  "Make this your default address": "Make this your default address",
+  "Make this your main address": "Make this your main address",
   "into": "into",
   "out from": "out from",
   "Transaction details": "Transaction details",
