Minor text adjustments

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -66,7 +66,7 @@
   "Secret recovery phrase": "Secret recovery phrase",
   "Type your password to show your secret recovery phrase.": "Type your password to show your secret recovery phrase.",
   "Show": "Show",
-  "Carefully note down the words! They form the recovery phrase for your wallet.": "Carefully note down the words! They form the recovery phrase for your wallet.",
+  "Carefully note down the words! They are your wallet's secret recovery phrase.": "Carefully note down the words! They are your wallet's secret recovery phrase.",
   "No recovery phrase was stored along with this wallet": "No recovery phrase was stored along with this wallet",
   "Expected fee": "Expected fee",
   "Address format is incorrect": "Address format is incorrect",
@@ -187,7 +187,7 @@
   "Back": "Back",
   "Type your recovery phrase": "Type your recovery phrase",
   "Error while importing wallet": "Error while importing wallet",
-  "Make sure to properly write down the words in a secure location! They form the recovery phrase for your wallet.": "Make sure to properly write down the words in a secure location! They form the recovery phrase for your wallet.",
+  "Make sure to properly write down the words in a secure location! They are your wallet's secret recovery phrase.": "Make sure to properly write down the words in a secure location! They are your wallet's secret recovery phrase.",
   "All good? Let's continue!": "All good? Let's continue!",
   "Everything is ready!": "Everything is ready!",
   "Welcome to Alephium.": "Welcome to Alephium.",
