--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -227,5 +227,6 @@
   "Make this your main address": "Make this your main address",
   "into": "into",
   "out from": "out from",
-  "Transaction details": "Transaction details"
+  "Transaction details": "Transaction details",
+  "Copy address": "Copy address"
 }
