noMargin option for Input and Select

--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -222,7 +222,7 @@
   "Optional passphrase": "Phrase de passe optionelle",
   "Confirm passphrase": "Confirmer la phrase de passe",
   "Passphrases don't match": "Les phrases de passe ne sont pas identiques",
-  "Language": "Language",
+  "Language": "Langue",
   "Change the wallet language": "Changer la langue du wallet",
   "English": "Anglais",
   "French": "Français"
