Rename main address to default address

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -6,9 +6,9 @@
   "Import wallet": "Import wallet",
   "Amount must be greater than {{ minAmountInAlph }}": "Amount must be greater than {{ minAmountInAlph }}",
   "Could not connect to the {{ currentNetwork }} network.": "Could not connect to the {{ currentNetwork }} network.",
-  "Note that if activated, \"{{ name }}\" will not be the main address anymore.": "Note that if activated, \"{{ name }}\" will not be the main address anymore.",
+  "Note that if activated, \"{{ name }}\" will not be the default address anymore.": "Note that if activated, \"{{ name }}\" will not be the default address anymore.",
   "Error while sweeping address {{ from }}": "Error while sweeping address {{ from }}",
-  " Note that if activated, \"{{ address }}\" will not be the main address anymore.": " Note that if activated, \"{{ address }}\" will not be the main address anymore.",
+  " Note that if activated, \"{{ address }}\" will not be the default address anymore.": " Note that if activated, \"{{ address }}\" will not be the default address anymore.",
   "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
   "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
   "Remove wallet \"{{ walletName }}\"": "Remove wallet \"{{ walletName }}\"",
@@ -17,7 +17,7 @@
   "Address label": "Address label",
   "The wallet is offline.": "The wallet is offline.",
   "Discreet mode": "Discreet mode",
-  "Main address": "Main address",
+  "Default address": "Default address",
   "Settings": "Settings",
   "Copied to clipboard!": "Copied to clipboard!",
   "Copy to clipboard": "Copy to clipboard",
@@ -42,7 +42,7 @@
   "LOCKED": "LOCKED",
   "Could not fetch data because the wallet is offline": "Could not fetch data because the wallet is offline",
   "Unknown wallet name": "Unknown wallet name",
-  "To remove this address from being the main address, you must set another one as main first.": "To remove this address from being the main address, you must set another one as main first.",
+  "To remove this address from being the default address, you must set another one as main first.": "To remove this address from being the default address, you must set another one as main first.",
   "Address options": "Address options",
   "Sweep address": "Sweep address",
   "Sweep all the unlocked funds of this address to another address.": "Sweep all the unlocked funds of this address to another address.",
@@ -224,7 +224,7 @@
   "Pick a color": "Pick a color",
   "Close": "Close",
   "Tab navigation": "Tab navigation",
-  "Make this your main address": "Make this your main address",
+  "Make this your default address": "Make this your default address",
   "into": "into",
   "out from": "out from",
   "Transaction details": "Transaction details",
