Display unlock datetime in tx details modal

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -232,5 +232,7 @@
   "into": "into",
   "out from": "out from",
   "Transaction details": "Transaction details",
-  "Copy address": "Copy address"
+  "Copy address": "Copy address",
+  "Unlocks at": "Unlocks at",
+  "Unlocked at": "Unlocked at"
 }
