Create transaction info type

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -234,5 +234,6 @@
   "Transaction details": "Transaction details",
   "Copy address": "Copy address",
   "Unlocks at": "Unlocks at",
-  "Unlocked at": "Unlocked at"
+  "Unlocked at": "Unlocked at",
+  "Moved": "Moved"
 }
