--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -236,5 +236,6 @@
   "into": "dans",
   "out from": "depuis",
   "Transaction details": "Détails de la transaction",
-  "Copy address": "Copier l'adresse"
+  "Copy address": "Copier l'adresse",
+  "Custom": "Personnalisé"
 }
