Fix and edit translations

--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -17,7 +17,7 @@
   "Address label": "Label de l'adresse",
   "The wallet is offline.": "Le wallet est hors ligne.",
   "Discreet mode": "Mode discret",
-  "Main address": "Adresse principale",
+  "Default address": "Adresse par défaut",
   "Settings": "Paramètres",
   "Copied to clipboard!": "Copié dans le presse-papiers !",
   "Copy to clipboard": "Copier dans le presse-papiers",
@@ -67,7 +67,7 @@
   "Select group": "Sélectionner le groupe",
   "Generate": "Générer",
   "Secret recovery phrase": "Phrase de récupération",
-  "Type your password to show your secret recovery phrase.": "Renseignez votre mot de passe pour afficher votre phrase de récupération.",
+  "Type your password to show the phrase.": "Entrez votre mot de passe pour afficher la phrase.",
   "Show": "Afficher",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Gardez ces mots précieusement ! Ils sont la clé pour accéder et récupérer votre wallet.",
   "No recovery phrase was stored along with this wallet": "Aucune phrase de récupération n'a été enregistrée avec ce wallet",
