Change wording of secret phrase in import screen
Related to #382

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -188,7 +188,7 @@
   "Back": "Back",
   "Type your recovery phrase": "Type your recovery phrase",
   "Error while importing wallet": "Error while importing wallet",
-  "Make sure to properly write down the words in a secure location! They are your wallet's secret recovery phrase.": "Make sure to properly write down the words in a secure location! They are your wallet's secret recovery phrase.",
+  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.",
   "All good? Let's continue!": "All good? Let's continue!",
   "Everything is ready!": "Everything is ready!",
   "Welcome to Alephium.": "Welcome to Alephium.",
