Vietnamese language related changes

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -225,6 +225,7 @@
   "Change the wallet language": "Change the wallet language",
   "English": "English",
   "French": "French",
+  "Vietnamese": "Vietnamese",
   "Activate dark mode": "Activate dark mode",
   "Pick a color": "Pick a color",
   "Close": "Close",
