--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -229,6 +229,7 @@
   "Change the wallet language": "Changer la langue du wallet",
   "English": "Anglais",
   "French": "Français",
+  "Vietnamese": "Vietnamien",
   "Activate dark mode": "Activer le mode sombre",
   "Pick a color": "Choissez une couleur",
   "Close": "Fermer",
