--- a/locales/vi-VN/App.json
+++ b/locales/vi-VN/App.json
@@ -223,8 +223,9 @@
   "Passphrases don't match": "Cụm từ khôi phục không trùng khớp",
   "Language": "Ngôn ngữ",
   "Change the wallet language": "Thay đổi ngôn ngữ",
-  "English": "English",
-  "French": "French",
+  "English": "Tiếng Anh",
+  "French": "người Pháp",
+  "Vietnamese": "Tiếng Việt",
   "Activate dark mode": "Bật giao diện tối",
   "Pick a color": "Chọn màu",
   "Close": "Đóng",
