correct Vietnamese spelling of French selector

--- a/locales/vi-VN/App.json
+++ b/locales/vi-VN/App.json
@@ -224,7 +224,7 @@
   "Language": "Ngôn ngữ",
   "Change the wallet language": "Thay đổi ngôn ngữ",
   "English": "Tiếng Anh",
-  "French": "người Pháp",
+  "French": "Tiếng Pháp",
   "Vietnamese": "Tiếng Việt",
   "Activate dark mode": "Bật giao diện tối",
   "Pick a color": "Chọn màu",
