--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -226,6 +226,7 @@
   "English": "English",
   "French": "French",
   "Vietnamese": "Vietnamese",
+  "German": "German",
   "Activate dark mode": "Activate dark mode",
   "Pick a color": "Pick a color",
   "Close": "Close",
