--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -230,6 +230,7 @@
   "English": "Anglais",
   "French": "Français",
   "Vietnamese": "Vietnamien",
+  "German": "Allemand",
   "Activate dark mode": "Activer le mode sombre",
   "Pick a color": "Choissez une couleur",
   "Close": "Fermer",
