--- a/locales/vi-VN/App.json
+++ b/locales/vi-VN/App.json
@@ -226,6 +226,7 @@
   "English": "Tiếng Anh",
   "French": "Tiếng Pháp",
   "Vietnamese": "Tiếng Việt",
+  "German": "Tiếng Đức",
   "Activate dark mode": "Bật giao diện tối",
   "Pick a color": "Chọn màu",
   "Close": "Đóng",
