updated additional German translations

--- a/locales/de-DE/App.json
+++ b/locales/de-DE/App.json
@@ -151,7 +151,7 @@
   "Start": "Starten",
   "Generate one address per group": "Eine Adresse pro Gruppe generieren",
   "Useful for miners or DeFi use.": "Nützlich für Miner oder DeFi.",
-  "More to come...": "More to come...",
+  "More to come...": "Mehr dazu bald...",
   "You have great ideas you want to share?": "Sie haben tolle Ideen, die Sie mit uns teilen wollen?",
   "Tell us!": "Sag es uns!",
   "New address": "Neue Adresse",
@@ -215,8 +215,8 @@
   "Reduce": "Verkleinern:",
   "Show addresses": "Adressen anzeigen",
   "More info": "Mehr Infos",
-  "passphraseWarningMessage": "passphraseWarningMessage",
-  "welcomeScreenPassphraseMessage": "welcomeScreenPassphraseMessage",
+  "passphraseWarningMessage": "passphraseWarnmeldung",
+  "welcomeScreenPassphraseMessage": "BegrüßungsbildschirmPassphraseMeldung",
   "I have read and understood the documentation": "Ich habe die Dokumentation gelesen und verstanden",
   "Use optional passphrase (advanced)": "Optionale Passphrase verwenden (erweitert)",
   "Confirm passphrase": "Passphrase bestätigen",
