--- a/locales/de-DE/App.json
+++ b/locales/de-DE/App.json
@@ -215,8 +215,8 @@
   "Reduce": "Verkleinern:",
   "Show addresses": "Adressen anzeigen",
   "More info": "Mehr Infos",
-  "passphraseWarningMessage": "passphraseWarnmeldung",
-  "welcomeScreenPassphraseMessage": "BegrüßungsbildschirmPassphraseMeldung",
+  "passphraseWarningMessage": "<0>Dies ist eine fortgeschrittene Funktion!</0><br />Verwenden Sie sie nur, wenn Sie wissen, was Sie tun.<br />Bitte lesen Sie unsere <5>Dokumentation</5>, um mehr darüber zu erfahren.",
+  "welcomeScreenPassphraseMessage": "Wenn Sie eine <1>Passphrase</1> verwenden möchten, sperren Sie Ihre neu erstellte Brieftasche.",
   "I have read and understood the documentation": "Ich habe die Dokumentation gelesen und verstanden",
   "Use optional passphrase (advanced)": "Optionale Passphrase verwenden (erweitert)",
   "Confirm passphrase": "Passphrase bestätigen",
