Integrate electron-updater
Related to #141

--- a/locales/en-US/App.json
+++ b/locales/en-US/App.json
@@ -121,7 +121,7 @@
   "Inputs": "Inputs",
   "Outputs": "Outputs",
   "New version": "New version",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.",
   "Download": "Download",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.",
   "Not your keys, not your coins.": "Not your keys, not your coins.",
@@ -264,5 +264,9 @@
   "Reject": "Reject",
   "Approve": "Approve",
   "Unable to convert the amount": "Unable to convert the amount",
-  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}"
+  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}",
+  "Restart the application to install the new update.": "Restart the application to install the new update.",
+  "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
+  "Update": "Update",
+  "Download failed, try again later.": "Download failed, try again later."
 }
