--- a/locales/vi-VN/App.json
+++ b/locales/vi-VN/App.json
@@ -121,7 +121,7 @@
   "Inputs": "Inputs",
   "Outputs": "Outputs",
   "New version": "Phiên bản mới",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng tải về và cài đặt để khắc phục các lỗi hiện đang có.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng tải về và cài đặt để khắc phục các lỗi hiện đang có.",
   "Download": "Tải về",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Hãy chắc chắn rằng bạn đã lưu trữ cụm từ khôi phục bí mật một cách nơi an toàn. Bạn sẽ cần đến các cụm từ khôi phục này trong tương lai. Nếu bạn đánh mất các cụm từ khôi phục này, ví của bạn sẽ không có cách nào khôi phục lại.",
   "Not your keys, not your coins.": "Not your keys, not your coins.",
@@ -264,5 +264,9 @@
   "Reject": "Reject",
   "Approve": "Approve",
   "Unable to convert the amount": "Unable to convert the amount",
-  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}"
+  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}",
+  "Restart the application to install the new update.": "Restart the application to install the new update.",
+  "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
+  "Update": "Update",
+  "Download failed, try again later.": "Download failed, try again later."
 }
