--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -272,5 +272,10 @@
   "Restart the application to install the new update.": "Restart the application to install the new update.",
   "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
   "Update": "Update",
-  "Download failed, try again later.": "Download failed, try again later."
+  "Download failed, try again later.": "Download failed, try again later.",
+  "Export current wallet": "Export current wallet",
+  "Export wallet": "Export wallet",
+  "Type your password to export your wallet.": "Type your password to export your wallet.",
+  "Show QR code": "Show QR code",
+  "Scan this QR code with your mobile wallet.": "Scan this QR code with your mobile wallet."
 }
