--- a/locales/de-DE/App.json
+++ b/locales/de-DE/App.json
@@ -268,5 +268,8 @@
   "Restart the application to install the new update.": "Restart the application to install the new update.",
   "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
   "Update": "Update",
-  "Download failed, try again later.": "Download failed, try again later."
+  "Download failed, try again later.": "Download failed, try again later.",
+  "Discover active addresses": "Discover active addresses",
+  "Scan the blockchain for addresses you used in the past.": "Scan the blockchain for addresses you used in the past.",
+  "Search": "Search"
 }
